// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection component should match the previous snapshot 1`] = `
<div>
  <div
    className="sc-ifAKCX lgbDDf"
  >
    <span
      className="sc-EHOje vEhJb"
    >
      <h3
        onClick={[Function]}
      />
      <button
        className="pull-right sc-bdVaJa cORElC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="sc-bwzfXH dwTRXS"
        >
          <div
            className="sc-htpNat kDKKFi"
          />
          <span
            className="sc-bxivhb kOilMN"
          >
            Delete
          </span>
        </div>
        <i
          className="fas fa-trash"
          role="presentation"
        />
      </button>
      <button
        className="pull-right sc-bdVaJa cORElC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="sc-bwzfXH dwTRXS"
        >
          <div
            className="sc-htpNat kDKKFi"
          />
          <span
            className="sc-bxivhb kOilMN"
          >
            Change name
          </span>
        </div>
        <i
          className="fas fa-pencil-alt"
          role="presentation"
        />
      </button>
      <hr />
    </span>
    <div
      aria-expanded={null}
      className="collapse in"
    >
      <div>
        <div
          className="sc-bZQynM jwpJAK"
        >
          <div
            className="list-group"
          >
            <div
              className="list-group-item"
            >
              <div
                className="sc-gzVnrw bBTGUh"
              >
                <button
                  className="sc-bdVaJa cORElC"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="sc-bwzfXH dwTRXS"
                  >
                    <div
                      className="sc-htpNat kDKKFi"
                    />
                    <span
                      className="sc-bxivhb kOilMN"
                    >
                      Toggle edit
                    </span>
                  </div>
                  <i
                    className="fas fa-pencil-alt"
                    role="presentation"
                  />
                </button>
                <button
                  className="sc-bdVaJa cORElC"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="sc-bwzfXH dwTRXS"
                  >
                    <div
                      className="sc-htpNat kDKKFi"
                    />
                    <span
                      className="sc-bxivhb kOilMN"
                    >
                      Minimize
                    </span>
                  </div>
                  <i
                    className="fas fa-minus"
                    role="presentation"
                  />
                </button>
              </div>
              <div
                className="sc-htoDjs ieWywL"
                onClick={[Function]}
                onDoubleClick={[Function]}
              >
                <div>
                  <h4>
                    POST
                  </h4>
                  www.foo.no
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collections component should match the previous snapshot 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span
      className="clearfix"
    >
      <button
        className="pull-right sc-bdVaJa cORElC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="sc-bwzfXH dwTRXS"
        >
          <div
            className="sc-htpNat kDKKFi"
          />
          <span
            className="sc-bxivhb kOilMN"
          >
            Add new collection
          </span>
        </div>
        <i
          className="fas fa-plus"
          role="presentation"
        />
      </button>
    </span>
  </div>
  <div
    className="panel-body"
  >
    <span>
      <div>
        <div
          className="sc-ifAKCX lgbDDf"
        >
          <span
            className="sc-EHOje bhfhJk"
          >
            <h3
              onClick={[Function]}
            >
              Collection
            </h3>
            <button
              className="pull-right sc-bdVaJa cORElC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="sc-bwzfXH dwTRXS"
              >
                <div
                  className="sc-htpNat kDKKFi"
                />
                <span
                  className="sc-bxivhb kOilMN"
                >
                  Delete
                </span>
              </div>
              <i
                className="fas fa-trash"
                role="presentation"
              />
            </button>
            <button
              className="pull-right sc-bdVaJa cORElC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="sc-bwzfXH dwTRXS"
              >
                <div
                  className="sc-htpNat kDKKFi"
                />
                <span
                  className="sc-bxivhb kOilMN"
                >
                  Change name
                </span>
              </div>
              <i
                className="fas fa-pencil-alt"
                role="presentation"
              />
            </button>
            <hr />
          </span>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div>
              <div
                className="sc-bZQynM jwpJAK"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="sc-gzVnrw bBTGUh"
                    >
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fas fa-pencil-alt"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fas fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="sc-htoDjs ieWywL"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.foo.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-ifAKCX lgbDDf"
        >
          <span
            className="sc-EHOje bhfhJk"
          >
            <h3
              onClick={[Function]}
            >
              Collection 2
            </h3>
            <button
              className="pull-right sc-bdVaJa cORElC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="sc-bwzfXH dwTRXS"
              >
                <div
                  className="sc-htpNat kDKKFi"
                />
                <span
                  className="sc-bxivhb kOilMN"
                >
                  Delete
                </span>
              </div>
              <i
                className="fas fa-trash"
                role="presentation"
              />
            </button>
            <button
              className="pull-right sc-bdVaJa cORElC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="sc-bwzfXH dwTRXS"
              >
                <div
                  className="sc-htpNat kDKKFi"
                />
                <span
                  className="sc-bxivhb kOilMN"
                >
                  Change name
                </span>
              </div>
              <i
                className="fas fa-pencil-alt"
                role="presentation"
              />
            </button>
            <hr />
          </span>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div>
              <div
                className="sc-bZQynM jwpJAK"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="sc-gzVnrw bBTGUh"
                    >
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fas fa-pencil-alt"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fas fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="sc-htoDjs ieWywL"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.foo.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                className="sc-bZQynM jwpJAK"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="sc-gzVnrw bBTGUh"
                    >
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fas fa-pencil-alt"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fas fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="sc-htoDjs ieWywL"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.bar.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                className="sc-bZQynM jwpJAK"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="sc-gzVnrw bBTGUh"
                    >
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fas fa-pencil-alt"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="sc-bdVaJa cORElC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="sc-bwzfXH dwTRXS"
                        >
                          <div
                            className="sc-htpNat kDKKFi"
                          />
                          <span
                            className="sc-bxivhb kOilMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fas fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="sc-htoDjs ieWywL"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.baz.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
